--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/kc9gpj/LIRIbot/issues"
   },
-  "homepage": "https://github.com/kc9gpj/LIRIbot#readme"
+  "homepage": "https://github.com/kc9gpj/LIRIbot#readme",
+  "dependencies": {
+    "debug": "^3.1.0",
+    "dotenv": "^6.0.0",
+    "inspect": "0.0.2",
+    "node-spotify-api": "^1.0.7",
+    "spotify": "^0.3.0",
+    "spotify-web-api-node": "^3.1.1",
+    "twitter": "^1.7.1"
+  }
 }
